--- a/src/Twili-Oh-Yes.Web/src/assets/main.css
+++ b/src/Twili-Oh-Yes.Web/src/assets/main.css
@@ -3,11 +3,12 @@
 #app {
   width: 100%;
   margin: 0 auto;
-  padding: 0 2rem; 
 }
 
 body {
   display: flex;
-  padding-top: 6em;
+  flex-direction: column-reverse;
+  padding-bottom: 6em;
   background-color: #343541;
+  margin-top: 55px;
 }
