--- a/src/Twili-Oh-Yes.Web/src/assets/main.css
+++ b/src/Twili-Oh-Yes.Web/src/assets/main.css
@@ -10,5 +10,5 @@ body {
   flex-direction: column-reverse;
   padding-bottom: 6em;
   background-color: #343541;
-  margin-top: 55px;
+  margin-top: 4.375rem;
 }
